# ChangeLog for dev-php5/xdebug
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-php5/xdebug/Attic/ChangeLog,v 1.24 2010/01/01 20:23:12 yngwin Exp $

*xdebug-2.0.5 (01 Jan 2010)

  01 Jan 2010; Ben de Groot <yngwin@gentoo.org> +xdebug-2.0.5.ebuild:
  Version bump. Fixes bug 256080.

  15 Jul 2008; Jeroen Roovers <jer@gentoo.org> xdebug-2.0.3.ebuild:
  Marked ~hppa too.

*xdebug-2.0.3 (03 Jun 2008)

  03 Jun 2008; Luca Longinotti <chtekk@gentoo.org> +xdebug-2.0.3.ebuild:
  Version bump.

  08 Mar 2008; <pva@gentoo.org> xdebug-2.0.2.ebuild:
  amd64 stable, bug #208848.

  04 Feb 2008; Markus Meier <maekke@gentoo.org> xdebug-2.0.2.ebuild:
  x86 stable, bug #208848

  17 Jan 2008; Raúl Porcel <armin76@gentoo.org> xdebug-2.0.2.ebuild:
  Add ~alpha/~ia64

*xdebug-2.0.2 (15 Nov 2007)

  15 Nov 2007; Markus Ullmann <jokey@gentoo.org> -xdebug-2.0.0.ebuild,
  -xdebug-2.0.1.ebuild, +xdebug-2.0.2.ebuild:
  Version bump from project overlay

  12 Nov 2007; Jakub Moc <jakub@gentoo.org> +xdebug-2.0.2.ebuild:
  Version bump

*xdebug-2.0.1 (28 Oct 2007)

  28 Oct 2007; Markus Ullmann <jokey@gentoo.org> +xdebug-2.0.1.ebuild:
  Version bump from php project overlay

  27 Oct 2007; Jakub Moc <jakub@gentoo.org> +xdebug-2.0.1.ebuild:
  Version bump

  11 Sep 2007; Christian Hoffmann <hoffie@gentoo.org> xdebug-2.0.0.ebuild:
  adjusting xdebug.profiler_output_name and xdebug.trace_output_name to fit
  new upstream default values as per bug 192212

  06 Sep 2007; Markus Ullmann <jokey@gentoo.org> -xdebug-2.0.0_rc3.ebuild,
  -xdebug-2.0.0_rc4.ebuild:
  Cleanup

*xdebug-2.0.0 (16 Aug 2007)

  16 Aug 2007; Christian Hoffmann <hoffie@gentoo.org>
  +xdebug-2.0.0.ebuild:
  version bump wrt bug 186167

*xdebug-2.0.0_rc4 (30 Jun 2007)

  30 Jun 2007; Konstantin V. Arkhipov <voxus@gentoo.org>
  +xdebug-2.0.0_rc4.ebuild:
  Version bump, closing bug #180109.

  18 Mar 2007; Luca Longinotti <chtekk@gentoo.org> xdebug-2.0.0_rc3.ebuild: