@@ -1,8 +1,10 @@
 DIST xdebug-2.0.2.tgz 279621 RMD160 c9477d1e760ba9b7a5a8322a3e306d00a0321788 SHA1 f417b4f3916fa67a867de1ba60f82038987bcf97 SHA256 2cee0c176d9cea4d20bea3d57e46f92fa09cf38f678659dd0022e789dcee0bc0
 DIST xdebug-2.0.3.tgz 286325 RMD160 e34dc1cb9c86d59bad18f8ef39c15f540c99f183 SHA1 fb172b0a48203759facd499f6825527c6112e275 SHA256 c9f49ced7ae3cb754840c09719dc0efdc1166221c566812936a23b0e16f78724
 DIST xdebug-2.0.5.tgz 289234 RMD160 f07cc3cdc9f1378fb6154c0b972baa6995cd7043 SHA1 77e6a8fd56641d8b37be68ea3c4a5c52b7511114 SHA256 4638641e643f4cedd9d2ec360fb13f47221973518b07ec6a2016c967063bb8b2
+DIST xdebug-2.1.0RC1.tgz 299030 RMD160 5df4c26b46c6ff808b4063e8fc3459d0481a9f24 SHA1 18cbe782df04bb2ae67b70ea1d1be64b42d54628 SHA256 2ba85ee5eddb848a99c1bec2730698daaa3ac5f738aad4dbf8721af42a6b452c
 EBUILD xdebug-2.0.2.ebuild 3582 RMD160 f17ee79e13b237d384c057532f50daba8b491baf SHA1 92e366ed14a8a841a1962155b9eb2ff2bf5cd332 SHA256 db035eb522b0dc42f0e4a989abcaf24acb511a328336c8db0564c129f8e599a3
 EBUILD xdebug-2.0.3.ebuild 3590 RMD160 6750b737875f7e26e07c5f01889c126fb3a6e420 SHA1 ef93c21458ed8bc81606ec2d6e1006f85f8cb7c2 SHA256 46e58afa57289757e1309ed15c779b7ad36270abcc0d0e0df17b07dc7ffdc013
 EBUILD xdebug-2.0.5.ebuild 3956 RMD160 a5c18a6f09833f5d37728806b91b17d9a9034af3 SHA1 ca25ecd1a481106deead6e16bcdaba026a973209 SHA256 f23d1d5d09a804c606f7edf415c26547e403b3f5a7fd4a7e5c8f1bfb27c73c8f
-MISC ChangeLog 3498 RMD160 60e1198e316f9d54ed2f2bf26b6cf6b0e9f67c6a SHA1 ed45622001ee42d575bd176ea943cd02ca2d2002 SHA256 9d084a77e3aea886c0c4f3a71dd681a6c13f98322ca562c7f702381e28f2202a
+EBUILD xdebug-2.1.0_rc1.ebuild 3958 RMD160 8d4b6ccf1e295c780a3be5fa75010fe3a1d64047 SHA1 ea7cabcba1d0db91284b71e9f2c65574235f31c1 SHA256 ec1bcaaaedad545ff1a28d669e62b44c9f79732c9fc4a547f8b0307fbffbf626
+MISC ChangeLog 3664 RMD160 132c00bdcdf1123e5c094200e8d5933cba449cfa SHA1 8d6b8a8a9d83f4622854f30cb9f6167867867ce2 SHA256 27cfa1e510fedb58a51fafd43bb21540b4c1e17e7e602261012dc82ed0019c75
 MISC metadata.xml 157 RMD160 a98db3a086fae3c09a903dadbc05f60443ec4b1a SHA1 ddaa23cc35eb917bf8962b652442bebb1ce0f440 SHA256 54f8878ca0228e380abbaa4b529806b5533a6b9b51b3b16c0909e906586a91a1
