@@ -1,6 +1,11 @@
 # ChangeLog for dev-php5/xdebug
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php5/xdebug/Attic/ChangeLog,v 1.24 2010/01/01 20:23:12 yngwin Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-php5/xdebug/Attic/ChangeLog,v 1.25 2010/05/24 08:54:22 mabi Exp $
+
+*xdebug-2.1.0_rc1 (24 May 2010)
+
+  24 May 2010; <mabi@gentoo.org> +xdebug-2.1.0_rc1.ebuild:
+  Bumped re bug #310515 (thanks to Ole Markus With <o.with@sportradar.ag>)
 
 *xdebug-2.0.5 (01 Jan 2010)
 
